Changelog
=========


1.0b2 (unreleased)
------------------

- Nothing changed yet.


1.0b1 (2012-06-27)
------------------

- First implementation.
  [jone]